infrastructure/openbao/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-ingress
  namespace: openbao
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik
  rules:
    - host: vault.nonprod.freecloudinitiative.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-active
                port:
                  number: 8200
    - host: openbao.nonprod.freecloudinitiative.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-active
                port:
                  number: 8200
